math-core/tests/snapshots/conversion_test__RR_command.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\RR"
---
<math>
    <mi>ℝ</mi>
</math>
