math-core/tests/snapshots/conversion_test__bold_font.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\bm{x}"
---
<math>
    <mi>𝒙</mi>
</math>
