math-core/tests/snapshots/conversion_test__colon_approx.snap
---
source: math-core/tests/conversion_test.rs
expression: "x:\\approx 2"
---
<math>
    <mi>x</mi>
    <mo lspace="0.2778em" rspace="0">:</mo>
    <mo lspace="0">≈</mo>
    <mn>2</mn>
</math>
